--- a/bssl-compat/prefixer/CMakeLists.txt
+++ b/bssl-compat/prefixer/CMakeLists.txt
@@ -8,7 +8,20 @@ set(Clang_DIR "/usr/lib/llvm/lib/cmake/clang")
 find_package(Clang REQUIRED CONFIG)
 find_package(LLVM REQUIRED CONFIG)
 
-message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION} (${LLVM_INSTALL_PREFIX},${LLVM_ENABLE_EH},${LLVM_ENABLE_RTTI},${LLVM_LINK_LLVM_DYLIB})")
+if(NOT Clang_FOUND OR NOT LLVM_FOUND)
+    set(ERROR_MESSAGE "")
+    if(NOT Clang_FOUND)
+        string(APPEND ERROR_MESSAGE "Clang not found. Please check Clang_DIR.\n")
+    endif()
+    if(NOT LLVM_FOUND)
+        string(APPEND ERROR_MESSAGE "LLVM not found. Please check LLVM_DIR.\n")
+    endif()
+    string(APPEND ERROR_MESSAGE "Both Clang and LLVM are required but at least one was not found.")
+    message(FATAL_ERROR ${ERROR_MESSAGE})
+endif()
+
+message(STATUS "Found Clang: ${Clang_DIR}")
+message(STATUS "Found LLVM: ${LLVM_DIR}")
 
 list(APPEND CMAKE_MODULE_PATH ${LLVM_CMAKE_DIR})
 include(AddLLVM) # For llvm_update_compile_flags()
