update for quic problem

--- a/source/extensions/quic/proof_source/BUILD
+++ b/source/extensions/quic/proof_source/BUILD
@@ -17,17 +17,21 @@ envoy_extension_package()
 
 envoy_cc_library(
     name = "envoy_quic_proof_source_factory_impl_lib",
-    srcs = ["envoy_quic_proof_source_factory_impl.cc"],
-    hdrs = ["envoy_quic_proof_source_factory_impl.h"],
+    srcs = [
+        #"envoy_quic_proof_source_factory_impl.cc"
+        ],
+    hdrs = [
+        #"envoy_quic_proof_source_factory_impl.h"
+        ],
     tags = ["nofips"],
     visibility = [
         "//source/common/quic:__subpackages__",
         "//test:__subpackages__",
     ],
     deps = [
-        "//source/common/quic:envoy_quic_proof_source_factory_interface",
-        "//source/common/quic:envoy_quic_proof_source_lib",
-        "@envoy_api//envoy/extensions/quic/proof_source/v3:pkg_cc_proto",
+        #"//source/common/quic:envoy_quic_proof_source_factory_interface",
+        #"//source/common/quic:envoy_quic_proof_source_lib",
+        #"@envoy_api//envoy/extensions/quic/proof_source/v3:pkg_cc_proto",
     ],
     alwayslink = LEGACY_ALWAYSLINK,
 )
@@ -44,7 +48,7 @@ envoy_cc_extension(
             "//bazel:boringssl_fips": [],
             "//bazel:boringssl_disabled": [],
             "//conditions:default": [
-                ":envoy_quic_proof_source_factory_impl_lib",
+                #":envoy_quic_proof_source_factory_impl_lib",
             ],
         },
     ),
