--- a/bssl-compat/CMakeLists.txt
+++ b/bssl-compat/CMakeLists.txt
@@ -48,7 +48,7 @@ add_dependencies(bssl-gen ossl-gen) # generate ossl headers before bssl headers
 
 # custom mappings
 add_library(bssl-compat STATIC
-  # source/aoqstest.c # This is test file
+  source/aoqstest.cc # This is test file
   source/ASN1_TIME_free.cc
   source/BASIC_CONSTRAINTS_free.cc
   source/BASIC_CONSTRAINTS_new.cc
@@ -213,14 +213,13 @@ add_library(bssl-compat STATIC
 )
 
 target_add_bssl_include(bssl-compat
-  include/openssl/provider.h
+  include/openssl/types.h
   include/openssl/core.h
   include/openssl/core_names.h
   include/openssl/core_dispatch.h
   include/openssl/params.h
-  include/openssl/types.h
   include/openssl/macros.h
-
+  include/openssl/provider.h
 
   include/openssl/aead.h
   include/openssl/aes.h
