Emergency update for test: commenting qat,cryptomb..

--- a/bssl-compat/BUILD
+++ b/bssl-compat/BUILD
@@ -14,9 +14,9 @@ cmake(
     out_static_libs = ["libbssl-compat.a"],
     visibility = ["//visibility:public"],
     generate_crosstool_file = False,
-    env = {"Clang_ROOT": "/usr/lib/llvm"},
-    
-    build_args = [ "-j64" ]
+    env = { "Clang_ROOT" : "/usr/lib/llvm" },
+
+    build_args = [ "-j" ]
 )
 
 alias(
