--- a/contrib/exe/BUILD
+++ b/contrib/exe/BUILD
@@ -8,6 +8,7 @@ load(
     "//contrib:all_contrib_extensions.bzl",
     "ARM64_SKIP_CONTRIB_TARGETS",
     "PPC_SKIP_CONTRIB_TARGETS",
+    "LINUX_SKIP_CONTRIB_TARGETS",
     "envoy_all_contrib_extensions",
 )
 
@@ -42,6 +43,7 @@ envoy_cc_test(
     deps = [
         "//test/config_test:example_configs_test_lib",
     ] + select({
+        "//bazel:linux_x86_64": envoy_all_contrib_extensions(LINUX_SKIP_CONTRIB_TARGETS),
         "//bazel:linux_aarch64": envoy_all_contrib_extensions(ARM64_SKIP_CONTRIB_TARGETS),
         "//bazel:linux_ppc": envoy_all_contrib_extensions(PPC_SKIP_CONTRIB_TARGETS),
         "//conditions:default": envoy_all_contrib_extensions(),
