Dynamic Change Process

--- a/.bazelrc
+++ b/.bazelrc
@@ -8,13 +8,23 @@
 # leave room for compiler/linker.
 # The number 3G is chosen heuristically to both support large VM and small VM with RBE.
 # Startup options cannot be selected via config.
-startup --host_jvm_args=-Xmx3g
+# startup --host_jvm_args=-Xmx3g
+# 더 큰 JVM 힙 크기 설정 (예: 64GB)
+startup --host_jvm_args=-Xmx64g
+
+# 로컬 RAM 리소스 설정 (예: 180GB)
+build --local_ram_resources=180000
+
+# 메모리 캐시 크기 설정 (예: 32GB)
+build --memory_cache_size=64G
 
 fetch --color=yes
 run --color=yes
 
 build --color=yes
-build --jobs=HOST_CPUS-1
+build --jobs=HOST_CPUS-1                # CPU-1 대신 모든 코어 사용
+build --local_cpu_resources=HOST_CPUS-1 # 로컬 CPU 리소스 최대화
+build --loading_phase_threads=HOST_CPUS-1 # 로딩 페이즈 최대 스레드
 build --workspace_status_command="bash bazel/get_workspace_status"
 build --incompatible_strict_action_env
 build --java_runtime_version=remotejdk_11
@@ -65,7 +75,7 @@ build:linux --copt=-fPIC
 build:linux --copt=-Wno-deprecated-declarations
 build:linux --cxxopt=-std=c++17 --host_cxxopt=-std=c++17
 build:linux --conlyopt=-fexceptions
-build:linux --fission=dbg,opt
+build:linux --fission=dbg
 build:linux --features=per_object_debug_info
 build:linux --action_env=BAZEL_LINKLIBS=-l%:libstdc++.a
 build:linux --action_env=BAZEL_LINKOPTS=-lm
