--- a/bazel/BUILD
+++ b/bazel/BUILD
@@ -591,12 +591,12 @@ config_setting(
 # Alias pointing to the selected version of BoringSSL:
 alias(
     name = "boringssl",
-    actual = "@envoy//bssl-compat:ssl"
+    actual = "@envoy//bssl-compat:ssl",
 )
 
 alias(
     name = "boringcrypto",
-    actual = "@envoy//bssl-compat:crypto"
+    actual = "@envoy//bssl-compat:crypto",
 )
 
 config_setting(
